fix alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -209,7 +209,7 @@
   width: 80%;
   margin: auto;
   display: block;
-  text-align: justify;
+  text-align: center;
 }
 #about-grid {
   margin: 0 auto;
